# SeaLantern

./: .SRCINFO  BUILD_GUIDE.md  Cargo.toml  Dockerfile  PKGBUILD  README-en.md  README.md  package.json  updater.json  vite.config.ts
.github/workflows/: docker-release.yml
docker-entry/: Cargo.toml
docker-entry/src/: main.rs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: system.rs  update_install.rs
src-tauri/src/models/: settings.rs
src-tauri/src/plugins/runtime/: filesystem.rs  mod.rs
src-tauri/src/plugins/runtime/ui/: basic.rs  common.rs  component.rs  config.rs  context_menu.rs  feedback.rs  mod.rs  sidebar.rs  style.rs
src-tauri/src/services/: async_loader.rs  global.rs  i18n.rs  java_detector.rs  mod.rs  panic_report.rs
src-tauri/src/services/download/: download_manager.rs  java_installer.rs  mod.rs  starter_installer_links.rs
src-tauri/src/services/http/: http_command_handlers.rs  http_server.rs  mod.rs
src-tauri/src/services/server/: downloader.rs  id_manager.rs  join.rs  log_pipeline.rs  manager.rs  mod.rs
src-tauri/tests/: ui_smoke.rs
src/api/: remoteLocales.ts  settings.ts
src/components/layout/: AppHeader.vue  AppSidebar.vue
src/components/views/settings/: GeneralSettingsCard.vue
src/data/: contributors.ts
src/language/: de-DE.json  en-US.json  es-ES.json  fr-FA.json  ja-JP.json  ko-KR.json  ru-RU.json  vi-VN.json  zh-CN.json  zh-TW.json
src/locales/: en-US.json  zh-CN.json  zh-TW.json
src/stores/: pluginStore.ts
src/views/: PaintView.vue  SettingsView.vue
