[package]
name = "sea-lantern"
version = "1.0.2"
description = "Minecraft Server Manager"
authors = ["FPS_Z"]
edition = "2021"
default-run = "sea-lantern"

[lib]
name = "sea_lantern_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0.0"
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
once_cell = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "net",
    "time",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.7"
sysinfo = "0.32"
axum = { version = "0.8", features = ["multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
mime_guess = { version = "2.0", optional = true }
regex = "1.10"
futures = "0.3.32"
sha2 = "0.10"
encoding_rs = "0.8"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
zip = "2.0"
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
] }
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
ipnet = "2.10"
chrono = "0.4"
lazy_static = "1.4"
shlex = "1.3.0"


[features]
docker = ["axum", "tower", "tower-http", "mime_guess"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
window-vibrancy = "0.5"
tauri-plugin-window-state = "2"
font-kit = "0.14"
opener = "0.7"
trash = "5.1"
